--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ streamlit>=1.10.0
 SpeechRecognition>=3.8.1
 deep-translator>=1.9.0
 gTTS>=2.3.0
-playsound>=1.3.0
-pytest>=7.0.0
-python-dotenv>=0.19.0 
+pygame>=2.5.0  # Replace playsound with pygame for audio
+python-dotenv>=0.19.0
+PyAudio>=0.2.11  # Required for microphone access
+rich>=13.9.4  # For better error logging
